--- a/src/global.scss
+++ b/src/global.scss
@@ -12,6 +12,9 @@
 /* Core CSS required for Ionic components to work properly */
 @import "~@ionic/angular/css/core.css";
 
+@import '~swiper/scss';
+@import '~@ionic/angular/css/ionic-swiper';
+
 /* Basic CSS for apps built with Ionic */
 @import "~@ionic/angular/css/normalize.css";
 @import "~@ionic/angular/css/structure.css";
